--- a/src/sass/system/_normalize.scss
+++ b/src/sass/system/_normalize.scss
@@ -103,6 +103,11 @@ html {
     при появлении / исчезновении скроллбара
    */
   scrollbar-gutter: stable;
+  /*
+    Ускоряем отклик на тач-устройствах:
+    помогает при мерцании и небольших задержках при тапе
+  */
+  touch-action: manipulation;
 }
 
 /**
