--- a/src/sass/base/site-main.scss
+++ b/src/sass/base/site-main.scss
@@ -1,6 +1,8 @@
 .site-main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: var(--gap-base);
   height: 100%;
 }
