--- a/src/sass/system/config/colors.scss
+++ b/src/sass/system/config/colors.scss
@@ -12,6 +12,7 @@ $common: (
 $theme-data-light: (
   // [bg]
   'bg-trigger-hover': hsl(0 0% 100% / 0.2),
+  'bg-trigger-hover-inverse': hsl(0 0% 0% / 0.2),
   'bg-trigger-active': hsl(225 10% 8% / 0.3),
   'bg-trigger-outline': hsl(225 10% 8% / 0.1),
   'bg-trigger-overlay': hsl(0 0% 100%),
@@ -22,6 +23,7 @@ $theme-data-light: (
 $theme-data-dark: (
   // [bg]
   'bg-trigger-hover': hsl(202 62% 39% / 0.2),
+  'bg-trigger-hover-inverse': hsl(22 62% 61% / 0.7),
   'bg-trigger-active': hsl(225 10% 8% / 0.3),
   'bg-trigger-outline': hsl(225 10% 8% / 0.1),
   'bg-trigger-overlay': hsl(202 71% 52%),
